--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,60 @@ body {
   font-family: "EB Garamond", serif;
 }
 
+.language-switch {
+  float:right;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+.language-text {
+  background-color: #f9f9f9;
+  padding: 7px 16px 8px;
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px 0px #9e9e9e;
+}
+
+.language-options {
+     display: none;
+     position: absolute;
+     background-color: #f9f9f9;
+     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+     z-index: 1;
+     border-radius: 2px;
+     margin-top: 1px;
+ }
+
+ .language-options a {
+     color: black;
+     padding: 7px 16px;
+     text-decoration: none;
+     display: block;
+ }
+
+ .language-options a:hover {
+   background-color: #f1f1f1
+ }
+
+ .language-options a:first-child:hover {
+   border-top-left-radius: inherit;
+   border-top-right-radius: inherit;
+ }
+
+ .language-options a:last-child:hover {
+   border-bottom-left-radius: inherit;
+   border-bottom-right-radius: inherit;
+ }
+
+/* Dropdown magic */
+ .language-switch:hover .language-options {
+     display: inline-block;
+ }
+
+ .language-switch:hover .language-text {
+     background-color: #f1f1f1;
+ }
+
+
 .map-area {
   border-left: 1px dotted black;
   display: flex;
@@ -10,17 +64,19 @@ body {
   width: 69%;
 }
 
+.map-area > * {
+  width:95%;
+}
+
 .subheader {
   border-bottom: 1px solid black;
   float: left;
   font-size: 2.5rem;
   margin-bottom: 1rem;
   margin-left: 0.5rem;
-  width: 95%;
 }
 
 .map {
-  width: 95%;
   margin-left: 0.5rem;
 }
 
